# 1CMCPServer

./: .gitignore  CHANGELOG.md  PROJECT-STATUS.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: dev-check.yml
apps/: README.md
apps/mcp-intelligence-server/: README.md
apps/mcp-intelligence-server/src/mcp_intelligence_server/: __init__.py  __main__.py  models.py  server.py  tools.py
apps/mcp-intelligence-server/src/mcp_intelligence_server/runtime/: __init__.py  context.py  dump_scanner.py  graph.py  models.py  reference_finder.py
apps/mcp-read-server/: README.md
apps/mcp-read-server/src/mcp_read_server/: __init__.py  __main__.py  server.py  tools.py
apps/mcp-read-server/src/mcp_read_server/runtime/: __init__.py  context.py  dump_adapter.py  file_based.py  live_adapter.py  models.py
apps/mcp-write-server/: README.md
apps/mcp-write-server/src/mcp_write_server/: __init__.py  __main__.py  server.py  tools.py
apps/mcp-write-server/src/mcp_write_server/runtime/: __init__.py  binary_dispatch.py  context.py  dump_ops.py  flow.py  guards.py  metadata_ops.py  models.py
apps/platform/: README.md
apps/platform/src/onec_platform/: __init__.py  bootstrap.py  dashboard.py  doctor.py  enterprise.py  installer.py  loader.py  models.py  process_control.py  realstand.py  recovery.py  runtime.py  runtime_logs.py  state.py  templates.py  workflow.py
docs/: README.md  administrator-manual.md  developer-manual.md  operator-manual.md  release-handoff.md  runbooks.md  version-support-matrix.md
docs/architecture/: phase-0-summary.md  phase-1-entry.md  phase-1-read-mvp-plan.md  phase-1-step-map.md  phase-2-step-map.md  phase-2-write-mvp-plan.md  phase-3-metadata-changes-plan.md  phase-3-step-map.md  phase-4-intelligence-plan.md  phase-4-step-map.md  phase-5-product-layer-plan.md  phase-5-step-map.md  phase-6-industrialization-plan.md  phase-6-step-map.md  track-a-real-write-path-plan.md  track-a-real-write-path-step-map.md  track-b-productization-polish-plan.md  track-b-productization-polish-step-map.md  track-c-packaging-installer-delivery-plan.md  track-c-packaging-installer-delivery-step-map.md  track-d-credentials-contract.md  track-d-credentials-flow-audit.md  track-d-operator-credentials-hardening-plan.md  track-d-operator-credentials-hardening-step-map.md  track-e-current-evidence-audit.md  track-e-multi-version-smoke-matrix-plan.md  track-e-multi-version-smoke-matrix-step-map.md  track-e-smoke-scenario.md  track-f-rollback-baseline-audit.md  track-f-rollback-eligibility-contract.md  track-f-rollback-whitelist-expansion-plan.md  track-f-rollback-whitelist-expansion-step-map.md  track-g-production-grade-mcp-transport-and-cli-plan.md  track-g-production-grade-mcp-transport-and-cli-step-map.md  track-g-runtime-cli-entrypoint-contract.md  track-g-transport-baseline-audit.md  track-h-network-grade-mcp-transport-and-authentication-boundary-plan.md  track-h-network-grade-mcp-transport-and-authentication-boundary-step-map.md  track-h-network-transport-and-auth-contract.md  track-h-transport-and-auth-baseline-audit.md  (+34 more)
docs/dev/: editable-install-and-workspace-discovery.md
docs/operators/: deployment-boundary.md  observability.md
docs/operators/installer/: windows-setup-exe.md
docs/operators/packaging/: distribution-boundary.md
docs/operators/service/: mcp-server.service  service-supervision.md
docs/runbooks/: local-dev-check.md  track-a-reference-stand-round-trip.md  track-e-multi-version-smoke-matrix.md
examples/: README.md
examples/demo-infobase/: infobase6.config.json
installers/windows/: build-setup-exe.ps1  first_run.ps1  setup.iss
scripts/: README.md
scripts/dev/: README.md  bootstrap_paths.ps1  launch.ps1  mcp_client_smoke.py  run_dev_check.ps1  selfcheck.py
scripts/release/: README.md  _install_runner.py  install.ps1  verify-release.ps1
