[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "1c-agent-platform"
version = "0.3.0"
description = "Platform for working with 1C configurations through MCP"
requires-python = ">=3.11"
readme = "README.md"
authors = [
    { name = "1C Agent Platform Team" },
]

# Track G / Step 4 — narrow stdio transport and CLI entrypoints.
# Three console scripts pointing at the per-package __main__:main
# entrypoints. No new runtime dependencies are introduced (the stdio
# transport is pure stdlib, see packages/mcp-common/src/mcp_common/
# _stdio_transport.py). The wheel-build block below remains empty,
# so these entries become installable binaries only when a future
# packaging track ships an actual wheel.
[project.scripts]
mcp-read-server = "mcp_read_server.__main__:main"
mcp-write-server = "mcp_write_server.__main__:main"
mcp-intelligence-server = "mcp_intelligence_server.__main__:main"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
# Intentionally empty (Track C / Step 3 honest constraint).
#
# The operator install flow for this project runs through
# `scripts/release/install.ps1` (a thin wrapper over
# `onec_platform.run_install_fast_path_from_json_file`), NOT through
# `pip install`. The source layout spreads 11 importable packages
# across `apps/*/src/` and `packages/*/src/`; PYTHONPATH for local
# development is bootstrapped by `scripts/dev/bootstrap_paths.ps1`,
# which the rest of the scripts/ tree dot-sources.
#
# Consequences of leaving this empty:
#   - `python -m build` produces no usable artifact for this project;
#   - the build toolchain (`build` / `hatch` / `hatchling`) is NOT
#     part of the documented dev prerequisites;
#   - no one is expected to install this project via pip today.
#
# This is a deliberate honest limitation of the current scaffolding,
# not an oversight. A future packaging track may revisit it and adopt
# either a single-wheel layout (one wheel containing all 11 packages)
# or a multi-wheel split (one wheel per package). Until that track is
# opened, see `scripts/release/README.md` for the canonical install
# story.
packages = []
