[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "1c-agent-platform"
version = "0.5.2"
description = "Platform for working with 1C configurations through MCP"
requires-python = ">=3.11"
readme = "README.md"
authors = [
    { name = "1C Agent Platform Team" },
]

# Track G / Step 4 — narrow stdio transport and CLI entrypoints.
# Three console scripts pointing at the per-package __main__:main
# entrypoints. No new runtime dependencies are introduced (the stdio
# transport is pure stdlib, see packages/mcp-common/src/mcp_common/
# _stdio_transport.py). The wheel-build block below remains empty,
# so these entries become installable binaries only when a future
# packaging track ships an actual wheel.
[project.scripts]
mcp-read-server = "mcp_read_server.__main__:main"
mcp-write-server = "mcp_write_server.__main__:main"
mcp-intelligence-server = "mcp_intelligence_server.__main__:main"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
# Track M / Step 4 — narrow supported distribution boundary.
#
# Historically (Track C / Step 3) this list was empty and accompanied
# by a 24-line honest-constraint comment explaining that no wheel
# build was supported. Track M Step 3 contract flipped that decision:
# the supported distribution boundary is now a single `py3-none-any`
# wheel containing the eleven src-layout packages enumerated below.
# Operator recipe: `docs/operators/packaging/distribution-boundary.md`.
#
# Explicit non-goals (mirroring the recipe): no "PyPI publication",
# no "signed distribution", no "GUI installer", no
# "Chocolatey / Homebrew / apt / conda-forge / NuGet" support, no
# "enterprise-ready" packaging. The build toolchain (`build`) remains
# an operator-side prerequisite — NOT a project dependency. The
# install-fast-path (`scripts/release/install.ps1`) and the wheel are
# orthogonal-but-complementary axes; see the recipe.
packages = [
    "apps/mcp-read-server/src/mcp_read_server",
    "apps/mcp-write-server/src/mcp_write_server",
    "apps/mcp-intelligence-server/src/mcp_intelligence_server",
    "apps/platform/src/onec_platform",
    "packages/mcp-common/src/mcp_common",
    "packages/onec-process-runner/src/onec_process_runner",
    "packages/onec-policy-engine/src/onec_policy_engine",
    "packages/onec-audit/src/onec_audit",
    "packages/onec-health/src/onec_health",
    "packages/onec-troubleshooting/src/onec_troubleshooting",
    "packages/onec-config/src/onec_config",
]
